@@ -21,7 +21,7 @@ air  = Material(1.0)
 a = .600     # period
 r = .150/2.0 # rod radius
 
-set_left_wall(slab_H_wall)
+set_lower_wall(slab_H_wall)
 
 PML = 0
 
